[tool.poetry]
name = "saipyspark-testing101"
version = "0.1.0"
description = "The python testing project"
authors = ["S-A-Ismail <syedahmedismail98@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/S-A-Ismail/SAIpyspark-testing101"
repository = "https://github.com/S-A-Ismail/SAIpyspark-testing101.git"
keywords = ["saipyspark_testing101"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0"
requests = "^2.25.1"

[tool.poetry.scripts]
saipyspark-testing101 = "saipyspark_testing101.console:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=0.12"]
build-backend = "poetry.masonry.api"
