[tool.poetry]
name = "saipyspark-testing101"
version = "0.1.0"
description = "The python testing project"
authors = ["S-A-Ismail <syedahmedismail98@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/S-A-Ismail/SAIpyspark-testing101"
repository = "https://github.com/S-A-Ismail/SAIpyspark-testing101.git"
keywords = ["saipyspark_testing101"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0"
requests = "^2.25.1"

[tool.poetry.scripts]
saipyspark-testing101 = "saipyspark_testing101.console:main"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = {extras = ["toml"], version = "^5.5"}
pytest-cov = "^2.12.0"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=0.12"]
build-backend = "poetry.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["saipyspark_testing101"]

[tool.coverage.report]
show_missing = true
fail_under = 100
